<resources>
    <string name="app_name">PetEver</string>
    <string name="oobe_start">"나만의
반려동물 캐릭터를
만들어보세요"</string>
    <string name="oobe_start2">"반려동물의 얼굴 정면이 담긴
사진 또는 영상을 선택해주세요.
사진은 선명할 수록 좋아요!"</string>
    <string name="oobe_camera_guide">"가이드 선에 맞춰 반려동물의
얼굴 정면을 촬영해주세요.
사진은 선명할 수록 좋아요!"</string>
    <string name="btn_make_character">캐릭터 만들기</string>
    <string name="btn_retry">다시 찍기</string>
    <string name="btn_retry_album">다시 선택하기</string>
    <string name="btn_camera">촬영하기</string>
    <string name="btn_album">앨범에서 선택</string>
    <string name="btn_oobe_question"><u>떠나간 반려동물도 만들 수 있나요?</u></string>
    <string name="invalid_value">"적합한 종을 찾을 수 없어요.
다시 한번 시도해주세요."</string>
    <string name="breed_pome">저는 포메에요!</string>
    <string name="breed_maltese">저는 말티즈에요!</string>
    <string name="breed_chihuahua">저는 치와와에요!</string>
    <string name="breed_shihtzu">저는 시츄에요!</string>
    <string name="breed_beagle">저는 비글이에요!</string>
    <string name="breed_yorkshire">저는 요크셔에요!</string>
    <string name="breed_golden">저는 리트리버에요!</string>
    <string name="breed_pug">저는 퍼그에요!</string>
    <string name="breed_poodle">저는 푸들이에요!</string>
    <string name="game_view_content_description">Game view</string>
    <string name="name_start">"펫에버를
시작해보세요"</string>
    <string name="name_guide">"내 반려동물 이름은"</string>
    <string name="name_relation">"저는 내 반려동물의"</string>
    <string name="name_done">"입니다."</string>
    <string name="name_sample">"코코"</string>
    <string name="name_relation_sample">"형/오빠"</string>
    <string name="next">"다음"</string>
</resources>