<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/name_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_normal"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".oobe.NameActivity">


    <TextView
        android:id="@+id/text_oobe_name"
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="160dp"
        android:text="@string/name_start"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name_guide"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/name_guide"
        style="@style/Text.Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_guide"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/name_new"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_oobe_name"/>

    <EditText
        android:id="@+id/name_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="@drawable/button_white"
        android:text="@string/name_sample"
        android:textAlignment="center"
        android:hint="머루"
        android:textColorHint="#E2E2E2"
        app:layout_constraintBottom_toTopOf="@id/name_relation"
        app:layout_constraintTop_toBottomOf="@+id/name_guide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/name_relation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_relation"
        android:textAlignment="center"
        style="@style/Text.Main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/name_relation_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@drawable/button_white"
        android:text="@string/name_relation_sample"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/name_done"
        app:layout_constraintTop_toBottomOf="@+id/name_relation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/name_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_done"
        android:textAlignment="center"
        style="@style/Text.Main"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_relation_new" />

    <Button
        android:id="@+id/btn_name"
        style="@style/Text.MainTextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_yellow"
        android:text="@string/next"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="127dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_done" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hidden_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_dimmed"
        android:visibility="invisible">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>